tests/functions/errors/missing_arg.c.res
[36mERROR: Not enough arguments[0m [4min line 8
[0m    c = add(1);
            ^
[1m[31mCompilation failed with 1 errors
[0m